# Job-Pilot

./: .dockerignore  Dockerfile  PERFECTO_RESUME_ARCHITECTURE.md  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: sync_to_hf.yml
ai_services/: prompts.py  tests.py  throttles.py  urls.py  views.py
ai_services/services/: extractor.py  followup.py  health_score.py
jobpilot/: asgi.py  settings.py  urls.py  wsgi.py
jobpilot-extension/: background.js  content.css  content.js  manifest.json  popup.html  popup.js
jobpilot-frontend/: package-lock.json  package.json  temp_prompt.txt
jobpilot-frontend/app/: globals.css  layout.tsx  page.tsx
jobpilot-frontend/app/jobs/: page.tsx
jobpilot-frontend/app/login/: page.tsx
jobpilot-frontend/app/overview/: page.tsx
jobpilot-frontend/app/privacy/: page.tsx
jobpilot-frontend/components/: AddJobModal.tsx  FollowUpModal.tsx  FollowUpSkeleton.tsx  JobDetailSheet.tsx  KanbanBoard.tsx  KanbanSkeleton.tsx  OverviewSkeleton.tsx  Sidebar.tsx  Toast.tsx  TopNav.tsx
jobpilot-frontend/hooks/: useHealthScore.ts  useJobDetail.ts  useJobs.ts
jobpilot-frontend/lib/: api.ts
jobpilot-frontend/store/: uiStore.ts
jobpilot-frontend/types/: index.ts
jobs/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
jobs/migrations/: 0001_initial.py  0002_jobapplication_experience_required_and_more.py  0003_alter_jobapplication_location.py  0004_alter_jobapplication_current_stage.py
users/: seralizers.py  serializers.py  tests.py  urls.py  views.py
(+4 files in other folders)
